# ai-hub

./: .env.example  .gitignore  CELERY_TROUBLESHOOTING.md  CLAUDE.md  README.md  main.py  pyproject.toml  railway-celery.json  railway.json  requirements.txt  run_celery_worker.sh
.github/: s3-backup.yml
.github/workflows/: s3-backup.yml
app/: app.py
app/api/v1/: api.py
app/api/v1/endpoints/: agents.py  devskiller_cookies.py  document.py  health.py  video.py
app/core/: celery_app.py  config.py  logging.py
app/middleware/: auth.py
app/models/: health.py
app/models/agents/: base.py
app/models/video/: video.py
app/services/: devskiller.py  devskiller_tasks.py  docling.py
app/services/agents/: base.py
app/utils/: env.py
notebooks/: CLAUDE.md  Interview Grading.ipynb  ScaleAI-Grading.ipynb
notebooks/grading/: pyproject.toml  test_video_download.py
notebooks/grading/src/: __init__.py
notebooks/grading/src/agent/: __init__.py  graph.py
notebooks/grading/src/mocks/: devskiller_mocks.py
notebooks/grading/src/services/: devskiller.py  devskiller_video.py
notebooks/grading/src/types/: devskiller.py
