[project]
name = "api-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "hypercorn>=0.17.3",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.3",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "notebook>=7.4.2",
]
